// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contractors list item component Contractor page should render a contract with relevant fields 1`] = `
<DocumentFragment>
  <li
    data-id="1"
    style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
  >
    <div
      class="contract-details"
    >
      <h5
        style="white-space: nowrap;"
      >
        126-126-1266
      </h5>
      <p>
        <span
          style="font-weight: 600;"
        >
          Sum of SORs:
        </span>
         £0.00
      </p>
      <p>
        <span
          style="font-weight: 600;"
        >
          SOR Count:
        </span>
         0
      </p>
      <p>
        <span
          style="font-weight: 600;"
        >
          Expires: 
        </span>
        8 Aug 2025
      </p>
    </div>
  </li>
</DocumentFragment>
`;

exports[`Contractors list item component Dashboard page should render a contract that expires within two months with relevant fields 1`] = `
<DocumentFragment>
  <li
    data-id="1"
    style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
  >
    <div
      class="contract-details"
    >
      <h5
        style="white-space: nowrap;"
      >
        127-127-1277
      </h5>
      <p>
        Sycous Limited
      </p>
      <p>
        Expires: 
        <span
          style="font-weight: 600;"
        >
          8 Aug 2025
        </span>
      </p>
    </div>
  </li>
</DocumentFragment>
`;

exports[`Contractors list item component sorSearch should render a contract that has the sor code in it with relevant fields 1`] = `
<DocumentFragment>
  <li
    data-id="1"
    style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
  >
    <div
      class="contract-details"
    >
      <h5
        style="white-space: nowrap;"
      >
        155-155-1555
      </h5>
      <p
        style="color: red;"
      >
        Expired: 8 May 2025
      </p>
    </div>
  </li>
</DocumentFragment>
`;
